# gesturebot

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: TrackObject.action
config/: vision_params.yaml
launch/: gesture_navigation_bridge.launch.py  gesture_recognition.launch.py  image_viewer.launch.py  object_detection.launch.py  person_following.launch.py  pose_detection.launch.py  pose_navigation_bridge.launch.py  vision_system.launch.py
media/: .gitkeep  MEDIA_CHECKLIST.md  README.md
media/benchmarks/: .gitkeep
media/demos/: .gitkeep
media/hardware/: .gitkeep
media/system_architecture/: .gitkeep
media/troubleshooting/: .gitkeep
msg/: FaceDetection.msg  GestureCommand.msg  HandGesture.msg  HandLandmarks.msg  PoseLandmarks.msg  VisionPerformance.msg
scripts/: README.md  setup_workspace.sh  verify_environment.py
src/nodes/: gesture_image_viewer.py  gesture_navigation_bridge.py  gesture_recognition_node.py  image_viewer_node.py  object_detection_node.py  person_following_controller.py  pose_detection_node.py  pose_navigation_bridge.py
src/vision_core/: __init__.py  base_node.py  controller.py  message_converter.py
srv/: ConfigureFeature.srv  EnableFeature.srv
test/: README.md  mediapipe_feature_tester.py  quick_test.py  run_all_tests.py  test_camera_integration.py  test_config.yaml  test_mediapipe_models.py  test_vision_nodes.py
